# ai-compliance-agent

./: AGENT.md  EVALUATE.md  LLM_CLIENT_REFACTORING.md  RAG_FREE_MODE.md  README.md  REFACTORING_COMPLETION_REPORT.md  chat.py  cli.py  demo_streaming_simulator.py  evaluate.py  example_agent_usage.py  example_usage.py  pyproject.toml  requirements.txt  results.json  sample_dataset.json  test_llm_client_refactor.py
compliance_engine/: __init__.py  agent.py  compliance_engine.py  config.py  llm_client.py  prompts.py
compliance_engine/audio/: __init__.py  transcriber.py
compliance_engine/livekit/: __init__.py  agent.py
compliance_engine/rag/: __init__.py  embeddings.py  loader.py  retriever.py
compliance_engine/streaming/: __init__.py  processor.py  segmenter.py  simulator.py
configs/policies/fintech/: rules.txt
tests/: conftest.py  test_agent.py  test_compliance_engine.py  test_evaluate.py  test_llm_client.py  test_rag_free_mode.py
