[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compliance-engine"
version = "1.0.0"
description = "AI-powered compliance detection engine for regulated industries"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["openai>=1.25.0"]

[project.scripts]
compliance-check = "cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
